[gd_scene load_steps=5 format=3 uid="uid://c7ey0qd3m5ads"]

[ext_resource type="Script" path="res://scenes/ui/ObjectsList/ObjectsList.gd" id="1_lhcws"]
[ext_resource type="Texture2D" uid="uid://bxfpdstl8w887" path="res://assets/icons/MoveDown.svg" id="2_37ega"]
[ext_resource type="Texture2D" uid="uid://dlrg0qwf5onb6" path="res://assets/icons/MoveUp.svg" id="3_ygitc"]
[ext_resource type="PackedScene" uid="uid://feb2ad46n08w" path="res://scenes/ui/ObjectsList/ObjectsListButton.tscn" id="4_e4qp4"]

[node name="ObjectsList" type="VBoxContainer"]
custom_minimum_size = Vector2(225, 0)
offset_right = 225.0
offset_bottom = 165.0
script = ExtResource("1_lhcws")
ObjectsListButtonScene = ExtResource("4_e4qp4")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DownButton" type="Button" parent="HBox"]
layout_mode = 2
tooltip_text = "Move object down"
focus_mode = 0
icon = ExtResource("2_37ega")

[node name="UpButton" type="Button" parent="HBox"]
layout_mode = 2
tooltip_text = "Move object up"
focus_mode = 0
icon = ExtResource("3_ygitc")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ObjectsGrid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="HBox/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="HBox/UpButton" to="." method="_on_up_button_pressed"]
